[unreal-ast] Track UnrealHeaderTool specifiers in the Clang AST

--- a/clang/lib/Lex/CMakeLists.txt
+++ b/clang/lib/Lex/CMakeLists.txt
@@ -29,6 +29,9 @@ add_clang_library(clangLex
   ScratchBuffer.cpp
   TokenConcatenation.cpp
   TokenLexer.cpp
+  # @unreal: BEGIN
+  UnrealEnginePPTagger.cpp
+  # @unreal: END
 
   LINK_LIBS
   clangBasic
