--- a/.github/workflows/redpoint.yml
+++ b/.github/workflows/redpoint.yml
@@ -32,7 +32,8 @@ jobs:
     - name: Build
       run: |
         mkdir -pv build/release/linux
-        cmake "-DLLVM_ENABLE_PROJECTS:STRING=clang;lld" \
+        cmake \
+          "-DLLVM_ENABLE_PROJECTS:STRING=clang;lld" \
           -DLLVM_INSTALL_TOOLCHAIN_ONLY:BOOL=TRUE \
           -DLLVM_INCLUDE_BENCHMARKS:BOOL=FALSE \
           -DLLVM_INCLUDE_DOCS:BOOL=FALSE \
@@ -66,7 +67,8 @@ jobs:
       shell: pwsh
       run: |
         mkdir build\release\win64
-        cmake "-DLLVM_ENABLE_PROJECTS:STRING=clang;lld" `
+        cmake -T host=x64 -A x64 `
+          "-DLLVM_ENABLE_PROJECTS:STRING=clang;lld" `
           -DLLVM_INSTALL_TOOLCHAIN_ONLY:BOOL=TRUE `
           -DLLVM_INCLUDE_BENCHMARKS:BOOL=FALSE `
           -DLLVM_INCLUDE_DOCS:BOOL=FALSE `
