Fix release creation not running because we don't name our default branch 'main'

--- a/.github/workflows/redpoint.yml
+++ b/.github/workflows/redpoint.yml
@@ -136,7 +136,7 @@ jobs:
     - llvm-redpoint-linux
     - llvm-redpoint-windows
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.event_name != 'pull_request'
     steps:
     - name: Publish Release
       uses: ncipollo/release-action@v1
